# PaddleOCR-GUI

./: .gitignore  AGENTS.md  DESIGN.md  README.md  package_windows.ps1  pyproject.toml  run_gui.ps1  run_gui.sh  setup.ps1  setup.sh  setup_cpu.ps1  setup_cpu.sh
bundle/: PaddleOCR-GUI.spec  paddleocr_cli_entry.py  paddleocr_gui_entry.py  pyinstaller_runtime_hook.py
packaging/: PaddleOCR-GUI.spec
src/paddlepdf/: cli.py  cuda_paths.py  errors.py  gui.py  gui_app.py  gui_support.py  i18n.py  mcp_server.py  models.py  ocr_service.py  output_files.py  paddle_runtime.py  planning.py  qt_startup.py  theme.py  third_party_output.py  user_paths.py
tests/: test_cli_agent.py  test_cli_paths.py  test_mcp_paths.py  test_mcp_server.py  test_output_files.py  test_paddle_runtime.py  test_planning.py  test_user_paths.py
typings/paddle/: __init__.pyi
typings/paddleocr/: __init__.pyi
